@@ -454,7 +454,7 @@ public final class WifiHelper {
     public StringBuilder lookUpScan() {
         StringBuilder stringBuilder = new StringBuilder();
         for (int i = 0; i < mWifiList.size(); i++) {
-            stringBuilder.append("Index_" + new Integer(i + 1).toString() + ":");
+            stringBuilder.append("Index_" + Integer.valueOf(i + 1).toString() + ":");
             // 将ScanResult信息转换成一个字符串包
             // 其中把包括：BSSID、SSID、capabilities、frequency、level
             stringBuilder.append((mWifiList.get(i).SSID).toString());
